# shobu-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: bindings.cpp  main.cpp  movegen.h  types.h
src/engine/: CMakeLists.txt  consts.h  movegen.cpp  movegen.h  perft.cpp  perft.h  print.cpp  print.h  search.cpp  search.h  types.h
src/nnue/: accumulator.h  linear.h  main.cpp  network.h  parse.h  search.h
test/: aggressivemovetest.cpp  movegentest.cpp  passivemovetest.cpp
